--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
                         <h1>About</h1>
                     </div>
                     <p>
-                    I am a fourth-year computer science Ph.D. student at Stanford University, advised by Professors <a href="https://cs.stanford.edu/~matei/">Matei Zaharia</a> and <a href="http://www.bailis.org/">Peter Bailis</a>.
-                    My research aims to democratize machine learning by reducing the cost of producing state-of-the-art models and creating novel abstractions that simplify machine learning development and deployment.
-                    My recent work spans from performance benchmarking of hardware and software systems (i.e., <a href='https://dawn.cs.stanford.edu/benchmark/'>DAWNBench</a> and <a href='https://mlperf.org/'>MLPerf</a>) to computationally efficient methods for active learning and core-set selection. 
-                    My Ph.D. has been supported by the NSF GRFP, <a href="http://dawn.cs.stanford.edu/">the Stanford DAWN Project</a>, and <a href='https://www.openphilanthropy.org/focus/global-catastrophic-risks/potential-risks-advanced-artificial-intelligence/open-phil-ai-fellowship-2020-class'>the Open Phil AI Fellowship</a>.
+                    I work as a Machine Learning Scientist at <a href="https://alectio.com">Alectio</a>.
+                    I lead the auto-labeling team where our goal is to reduce costs associated with the data collection process. Identification of noisy and redundant data points, deep unsupervised clustering, and pseudo-labeling are some problems I directly tackle everyday.
+                    Prior to this, I completed my MS in Computer Science at UCLA, advised by Professor <a href="http://web.cs.ucla.edu/~miryung/">Miryung Kim</a>. 
                     </p>
 
                     <p>
