--- a/index.html
+++ b/index.html
@@ -50,10 +50,8 @@
                     </p>
 
                     <p>
-                    Prior to starting my Ph.D. at Stanford, I worked at the intersection of machine learning and education.
-                    With the <a href="https://openlearning.mit.edu/">MIT Office of Digital Learning</a>, I created new ways of characterizing student populations, predicting student drop out, and personalizing interventions.
-                    Based on <a href="https://youtu.be/stxJMsxxxtA">my own story</a>, I believe that with the right resources, tools, and encouragement we are all capable of doing great work!
-                    To this end, <a href="public/misc/Stanford-purpose.pdf">my mission in graduate school</a> is to utilize my passion for computer science and machine learning to benefit society at large, while serving as an example of success that will shape the future of our society.
+                    My research goal is to create robust methods which can learn with very little information.
+                    Methods that require less data by extracting more information from the already available labeled data and algorithms which work for a variety of datasets without the need for excessive fine-tuning are of the greatest interest to me. 
                     </p>
                 </div>
 
