--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <p>
                     My research goal is to create robust methods which can learn with very little information.
                     Methods that require less data by extracting more information from the already available labeled data and algorithms which work for a variety of datasets without the need for excessive fine-tuning are of the greatest interest to me. 
+                    In my free time, I enjoy <a href="https://www.goodreads.com/user/show/46223139-prateek-malhotra">reading</a>, antique shopping, and meeting new people!
                     </p>
                 </div>
 
