--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                 <div>
                     <div class="page-header" id="publications">
-                        <h1>Publications</h1>
+                        <h1>Projects</h1>
                     </div>
                     <div class="pub">
                         <div class="title">
@@ -71,174 +71,6 @@
                         </div>
                         <div class="location">
                             arXiv Preprint 2020
-                        </div>
-                    </div>
-
-                    <div class="pub">
-                        <div class="title">
-                            <a href="https://arxiv.org/abs/1911.02549">
-                                MLPerf Inference Benchmark
-                            </a>
-                        </div>
-                        <div class="authors">
-                            Vijay Janapa Reddi, Christine Cheng, David Kanter, Peter Mattson, Guenther Schmuelling, Carole-Jean Wu, Brian Anderson, Maximilien Breughe, Mark Charlebois, William Chou, Ramesh Chukka, <span class='me'>Cody Coleman</span>, Sam Davis, Pan Deng, Greg Diamos, Jared Duke, Dave Fick, J. Scott Gardner, Itay Hubara, Sachin Idgunji, Thomas B. Jablin, Jeff Jiao, Tom St. John, Pankaj Kanwar, David Lee, Jeffery Liao, Anton Lokhmotov, Francisco Massa, Peng Meng, Paulius Micikevicius, Colin Osborne, Gennady Pekhimenko, Arun Tejusve Raghunath Rajan, Dilip Sequeira, Ashish Sirasao, Fei Sun, Hanlin Tang, Michael Thomson, Frank Wei, Ephrem Wu, Lingjie Xu, Koichi Yamada, Bing Yu, George Yuan, Aaron Zhong, Peizhao Zhang, Yuchen Zhou
-                        </div>
-                        <div class="location">
-                            In ISCA 2020
-                        </div>
-                    </div>
-
-                    <div class="pub">
-                        <div class="title">
-                            <a href="https://openreview.net/forum?id=HJg2b0VYDr">
-                                Selection via Proxy: Efficient Data Selection for Deep Learning
-                            </a>
-                        </div>
-                        <div class="authors">
-                            <span class='me'>Cody Coleman</span>, Christopher Yeh, Stephen Mussmann, Baharan Mirzasoleiman, Peter Bailis, Percy Liang, Jure Leskovec, Matei Zaharia
-                        </div>
-                        <div class="location">
-                            In ICLR 2020
-                        </div>
-                    </div>
-
-                    <div class="pub">
-                        <div class="title">
-                            <a href="https://pml4dc.github.io/iclr2020/program/pml4dc_25.html">
-                                Selection via Proxy: Increasing the Computational Efficiency of Deep Active Learning
-                            </a>
-                        </div>
-                        <div class="authors">
-                            <span class='me'>Cody Coleman</span>, Christopher Yeh, Stephen Mussmann, Baharan Mirzasoleiman, Peter Bailis, Percy Liang, Jure Leskovec, Matei Zaharia
-                        </div>
-                        <div class="location">
-                            In Practical ML for Developing Countries Workshop @ ICLR 2020
-                        </div>
-                    </div>
-
-                    <div class="pub">
-                        <div class="title">
-                            <a href="https://arxiv.org/abs/1910.01500">
-                                MLPerf Training Benchmark
-                            </a>
-                        </div>
-                        <div class="authors">
-                            Peter Mattson, Christine Cheng, <span class='me'>Cody Coleman</span>, Greg Diamos, Paulius Micikevicius, David Patterson, Hanlin Tang, Gu-Yeon Wei, Peter Bailis, Victor Bittorf, David Brooks, Dehao Chen, Debojyoti Dutta, Udit Gupta, Kim Hazelwood, Andrew Hock, Xinyuan Huang, Bill Jia, Daniel Kang, David Kanter, Naveen Kumar, Jeffery Liao, Deepak Narayanan, Tayo Oguntebi, Gennady Pekhimenko, Lillian Pentecost, Vijay Janapa Reddi, Taylor Robie, Tom St. John, Carole-Jean Wu, Lingjie Xu, Cliff Young, Matei Zaharia
-                        </div>
-                        <div class="location">
-                            In MLSys 2020
-                        </div>
-                    </div>
-
-                    <div class="pub">
-                        <div class="title">
-                            <a href="https://ieeexplore.ieee.org/document/9001257">
-                                MLPerf: An Industry Standard Benchmark Suite for Machine Learning Performance
-                            </a>
-                        </div>
-                        <div class="authors">
-                            Peter Mattson, Vijay Janapa Reddi, Christine Cheng, <span class='me'>Cody Coleman</span>, Gregory Diamos, David Kanter, Paulius Micikevicius, David Patterson, Guenther Schmuelling, Hanlin Tang, Gu-Yeon Wei, Carole-Jean Wu
-                        </div>
-                        <div class="location">
-                            In IEEE MICRO March 2020
-                        </div>
-                    </div>
-
-                    <div class="pub">
-                        <div class="title">
-                            <a href="public/papers/sigops_dawnbench_analysis.pdf">
-                                Analysis of DAWNBench, a Time-to-Accuracy Machine Learning Performance Benchmark
-                            </a>
-                        </div>
-                        <div class="authors">
-                            <span class='me'>Cody A. Coleman*</span>, Daniel Kang*, Deepak Narayanan*,  Luigi Nardi, Tian Zhao, Jian Zhang, Peter Bailis, Kunle Olukotun, Chris Ré, and Matei Zaharia
-                        </div>
-                        <div class="location">
-                            In ACM SIGOPS Operating Systems Review July 2019
-                        </div>
-                    </div>
-
-                    <div class="pub">
-                        <div class="title">
-                            <a href="public/papers/mlsys_dawnbench_analysis.pdf">
-                                Analysis of the Time-To-Accuracy Metric and Entries in the DAWNBench Deep Learning Benchmark
-                            </a>
-                        </div>
-                        <div class="authors">
-                            <span class='me'>Cody A. Coleman*</span>, Daniel Kang*, Deepak Narayanan*,  Luigi Nardi, Tian Zhao, Jian Zhang, Peter Bailis, Kunle Olukotun, Chris Ré, and Matei Zaharia
-                        </div>
-                        <div class="location">
-                            In NeurIPS Systems for ML Workshop 2018
-                        </div>
-                    </div>
-
-                    <div class="pub">
-                        <div class="title">
-                            <a href="public/papers/nips17-dawnbench.pdf">
-                                DAWNBench: An End-to-End Deep Learning Benchmark and Competition
-                            </a>
-                        </div>
-                        <div class="authors">
-                            <span class='me'>Cody A. Coleman</span>, Deepak Narayanan, Daniel Kang, Tian Zhao, Jian Zhang, Luigi Nardi, Peter Bailis, Kunle Olukotun, Chris Ré, and Matei Zaharia
-                        </div>
-                        <div class="location">
-                            In NIPS ML Systems Workshop 2017
-                        </div>
-                    </div>
-
-                    <div class="pub">
-                        <div class="title">
-                            <a href="public/papers/probabilistic_use_cases.pdf">
-                                Probabilistic Use Cases: Discovering Behavioral Patterns for Predicting Certification
-                            </a>
-                        </div>
-                        <div class="authors">
-                            <span class='me'>Cody A. Coleman</span>, Daniel T. Seaton, and Isaac Chuang
-                        </div>
-                        <div class="location">
-                            In Learning@Scale 2015
-                        </div>
-                    </div>
-
-                    <div class="pub">
-                        <div class="title">
-                            <a href="public/papers/beyond_time_on_task.pdf">
-                                Beyond Time-on-Task: The Relationship between Spaced Study and Certification in MOOCs
-                            </a>
-                        </div>
-                        <div class="authors">
-                            Yohsuke R. Miyamoto, <span class='me'>Cody A. Coleman</span>, Joseph Williams, Jacob Whitehill, Sergiy Nesterko, and Justin Reich
-                        </div>
-                        <div class="location">
-                            In Journal of Learning Analytics 2015
-                        </div>
-                    </div>
-
-                    <div class="pub">
-                        <div class="title">
-                            <a href="http://er.educause.edu/articles/2015/2/enrollment-in-mitx-moocs-are-we-educating-educators">
-                                Enrollment in MITx MOOCs: Are We Educating Educators?
-                            </a>
-                        </div>
-                        <div class="authors">
-                            Dnaiel T. Seaton, <span class='me'>Cody A. Coleman</span>, Jon P. Daries, and Isaac Chuang
-                        </div>
-                        <div class="location">
-                            In EDUCAUSE Review 2015
-                        </div>
-                    </div>
-
-                    <div class="pub">
-                        <div class="title">
-                            <a href="http://www.educationaldatamining.org/EDM2015/uploads/papers/paper_112.pdf">
-                                Beyond Prediction: First Steps Toward Automatic Intervention in MOOC Student Stopout
-                            </a>
-                        </div>
-                        <div class="authors">
-                            Jacob Whitehill, Joseph Williams, Glenn Lopez, <span class='me'>Cody A. Coleman</span>, and Justin Reich
-                        </div>
-                        <div class="location">
-                            In Educational Data Mining (EDM) 2015
                         </div>
                     </div>
                 </div>
