--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                     </div>
                     <div class="pub">
                         <div class="title">
-                            <a href="https://arxiv.org/abs/2007.00077">
-                                Similarity Search for Efficient Active Learning and Search of Rare Concepts
+                            <a href="DeepWatch.pdf">
+                               DeepWatch: White-Box Watchpoint for Deep Neural Networks
                             </a>
                         </div>
                         <div class="authors">
-                            <span class='me'>Cody Coleman</span>, Edward Chou, Sean Culatana, Peter Bailis, Alexander C. Berg, Roshan Sumbaly, Matei Zaharia, I. Zeki Yalniz
+                            <span class='me'>Prateek Malhotra</span>, Amrutha Srinivasan, Soundarya Tekkalakota, Miryung Kim
                         </div>
                         <div class="location">
                             arXiv Preprint 2020
