--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <span class='me'>Prateek Malhotra</span>, Amrutha Srinivasan, Soundarya Tekkalakota, Miryung Kim
                         </div>
                         <div class="location">
-                            arXiv Preprint 2020
+                            Masters capstone project
                         </div>
                     </div>
                 </div>
