--- a/index.html
+++ b/index.html
@@ -73,6 +73,21 @@
                             Masters capstone project
                         </div>
                     </div>
+                    
+                    <div class="pub">
+                        <div class="title">
+                            <a href="Redistricting.pdf">
+                               Redistricting using Active Contours
+                            </a>
+                        </div>
+                        <div class="authors">
+                            <span class='me'>Prateek Malhotra</span>, Mihir Mathur, Zeina Migeed, Alexandre Tiard, Demetri Terzopoulos (instructor)
+                        </div>
+                        <div class="location">
+                            Final project for CS269: Current topics in Artificial Intelligence
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
