--- a/index.html
+++ b/index.html
@@ -88,6 +88,20 @@
                         </div>
                     </div>
                     
+                    <div class="pub">
+                        <div class="title">
+                            <a href="LowRank.pdf">
+                               Low Rank Approximation of Weight Matrices in GANs
+                            </a>
+                        </div>
+                        <div class="authors">
+                            Arnav Garg, <span class='me'>Prateek Malhotra</span>, Tanmay Sardesai, Quanquan Gu
+                        </div>
+                        <div class="location">
+                            Final project for CS269: Advances in Deep Learning
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
