--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             Arnav Garg, <span class='me'>Prateek Malhotra</span>, Tanmay Sardesai, Quanquan Gu
                         </div>
                         <div class="location">
-                            Final project for CS269: Advances in Deep Learning
+                            Final project for CS269: Deep Learning theory
                         </div>
                     </div>
                     
