--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                 <div>
                     <div class="page-header" id="publications">
-                        <h1>Projects</h1>
+                        <h1>Research</h1>
                     </div>
                     <div class="pub">
                         <div class="title">
