--- a/index.html
+++ b/index.html
@@ -102,6 +102,19 @@
                         </div>
                     </div>
                     
+                    <div class="pub">
+                        <div class="title">
+                            <a href="OSS.pdf">
+                               A Study on Developer Growth in Open Source Software Systems
+                            </a>
+                        </div>
+                        <div class="authors">
+                            Nandan Parikh, <span class='me'>Prateek Malhotra</span>, Tanmay Chinchore, Miryung Kim (instructor)
+                        </div>
+                        <div class="location">
+                            Final project for CS230: Graduate Software Engineering
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
