--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <span class='me'>Prateek Malhotra</span>, Mihir Mathur, Zeina Migeed, Alexandre Tiard, Demetri Terzopoulos (instructor)
                         </div>
                         <div class="location">
-                            Final project for CS269: Current topics in Artificial Intelligence
+                            CS269: Current topics in Artificial Intelligence
                         </div>
                     </div>
                     
@@ -98,7 +98,7 @@
                             Arnav Garg, <span class='me'>Prateek Malhotra</span>, Tanmay Sardesai, Quanquan Gu
                         </div>
                         <div class="location">
-                            Final project for CS269: Theory of Deep Learning
+                            CS269: Theory of Deep Learning
                         </div>
                     </div>
                     
@@ -112,7 +112,7 @@
                             Nandan Parikh, <span class='me'>Prateek Malhotra</span>, Tanmay Chinchore, Miryung Kim (instructor)
                         </div>
                         <div class="location">
-                            Final project for CS230: Graduate Software Engineering
+                            CS230: Graduate Software Engineering
                         </div>
                     </div>
                 </div>
