--- a/index.html
+++ b/index.html
@@ -115,6 +115,20 @@
                             CS230: Graduate Software Engineering
                         </div>
                     </div>
+                    
+                    <div class="pub">
+                        <div class="title">
+                            <a href="Bias.pdf">
+                              Dealing with Unintended Bias in Toxicity Classification
+                            </a>
+                        </div>
+                        <div class="authors">
+                            <span class='me'>Prateek Malhotra</span>, Tanmay Sardesai, Kai-wei Chang(instructor)
+                        </div>
+                        <div class="location">
+                            CS269: NLP
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
