--- a/index.html
+++ b/index.html
@@ -129,6 +129,21 @@
                             CS269: NLP
                         </div>
                     </div>
+                    
+                    <div class="pub">
+                        <div class="title">
+                            <a href="Congested.pdf">
+                              Congested Scene Analysis using Dilated Convolutional Generative Adversarial Networks
+                            </a>
+                        </div>
+                        <div class="authors">
+                            <span class='me'>Prateek Malhotra</span>, J.B Jagdale
+                        </div>
+                        <div class="location">
+                            Undergraduate thesis (short version)
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
