--- a/index.html
+++ b/index.html
@@ -144,6 +144,20 @@
                         </div>
                     </div>
                     
+                    <div class="pub">
+                        <div class="title">
+                            <a href="Towards.pdf">
+                             Towards More Effective Energy-based Deep Learning
+                            </a>
+                        </div>
+                        <div class="authors">
+                            <span class='me'>Prateek Malhotra</span>, Miodrag Potkonjak (instructor)
+                        </div>
+                        <div class="location">
+                            CS259: Optimization
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
