--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             </a>
                         </div>
                         <div class="authors">
-                            <span class='me'>Prateek Malhotra</span>, Tanmay Sardesai, Kai-wei Chang (instructor)
+                            <span class='me'>Prateek Malhotra</span>, Tanmay Sardesai, Kai-Wei Chang (instructor)
                         </div>
                         <div class="location">
                             CS269: NLP
