--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <strong>Vitals:</strong> <a href="public/personal/Prateek_CV.pdf">CV/Resume</a>
                         </li>
                         <li>
-                            <strong>Twitter:</strong> <a href="https://twitter.com/prateek_dbst">@prateek_dbst</a>
+                            <strong>Twitter:</strong> <a href="https://twitter.com/pmalhotra96">@pmalhotra96</a>
                         </li>
                         <li>
                             <strong>Github:</strong> <a href="https://github.com/prateekm08">prateekm08</a>
