--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     
                 </div>
 
-                <div>
+                <!-- <div>
                     <div class="page-header" id="essays">
                         <h1>Essays</h1>
                     </div>
@@ -171,7 +171,7 @@
                             Alectio Newsletter
                         </div>
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </div>
