--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                             </a>
                         </div>
                         <div class="authors">
-                            <span class='me'>Prateek Malhotra</span>
+                            <span class='me'>Prateek Malhotra</span>, Bhadrinath Nagabandi
                         </div>
                         <div class="location">
                             Alectio Newsletter
