--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
                         <h1>About</h1>
                     </div>
                     <p>
-                    I work as a Machine Learning Scientist at <a href="https://alectio.com">Alectio</a> where I lead the auto-labeling team to reduce costs associated with the data collection process. Identification of noisy and redundant data points, deep unsupervised clustering, and pseudo-labeling are some problems I directly tackle everyday. Prior to this, I completed my MS in Computer Science at UCLA, advised by Professor <a href="http://web.cs.ucla.edu/~miryung/">Miryung Kim</a>.</p>
-
+                        Joined <a href="https://www.syntiant.com">Syntiant</a> as a Member Of Technical Staff focused on improving the quality of data used in the
+                        machine learning process and reducing labeling costs while improving model performance.
+                    </p>
+                    <p>
+                    Previously, I worked as a Machine Learning Scientist at <a href="https://alectio.com">Alectio</a> where I lead the auto-labeling team to reduce costs associated with the data collection process. Identification of noisy and redundant data points, deep unsupervised clustering, and pseudo-labeling are some problems I directly tackle everyday. Prior to this, I completed my MS in Computer Science at UCLA, advised by Professor <a href="http://web.cs.ucla.edu/~miryung/">Miryung Kim</a>.</p>
                     <p>
                     My research goal is to create robust methods which can learn with very little information.
                     Methods that require less data and algorithms which work for a variety of datasets without the need for excessive fine-tuning are of the greatest interest to me. 
