--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <strong>Twitter:</strong> <a href="https://twitter.com/pmalhotra96">@pmalhotra96</a>
                         </li>
                         <li>
-                            <strong>Github:</strong> <a href="https://github.com/prateekm08">prateekm08</a>
+                            <strong>Github:</strong> <a href="https://github.com/prateekm08">prateekm08</a> / <a href="https://github.com/prateekmalhotra">prateekmalhotra</a>
                         </li>
                         <li>
                             <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/prateek-m-00a22a125/">prateekmalhotra</a>
